--- a/composer.json
+++ b/composer.json
@@ -69,5 +69,10 @@
         "post-update-cmd": [
             "@composer bin all update --ansi"
         ]
+    },
+    "extra": {
+        "bamarni-bin": {
+            "bin-links": false
+        }
     }
 }
