--- a/composer.json
+++ b/composer.json
@@ -27,11 +27,12 @@
         "ext-ast": "*",
         "bamarni/composer-bin-plugin": "^1.4",
         "phpstan/phpstan": "1.4.3",
-        "phpstan/phpstan-phpunit": "1.0.0",
         "phpstan/phpstan-doctrine": "1.2.8",
+        "phpstan/phpstan-phpunit": "1.0.0",
         "phpstan/phpstan-symfony": "1.1.2",
         "rector/rector": "0.12.13",
         "roave/security-advisories": "dev-master",
+        "serendipity_hq/rector-config": "^1.0",
         "symfony/browser-kit": "~5.4|~6.0",
         "symfony/css-selector": "~5.4|~6.0",
         "symfony/debug-bundle": "~5.4|~6.0",
