--- a/.github/workflows/phan.yml
+++ b/.github/workflows/phan.yml
@@ -64,6 +64,10 @@ jobs:
                 with:
                     working-directory: './vendor-bin/phan'
 
+            -   name: Remove Kernel.php
+                run: |
+                    rm ./src/Kernel.php
+
             -   name: Run Phan
                 run: |
                     ./vendor-bin/phan/vendor/bin/phan --no-progress-bar --dead-code-detection --load-baseline .baseline-phan.php
