--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -59,6 +59,10 @@ jobs:
                 with:
                     working-directory: './vendor-bin/phpunit'
 
+            -   name: Remove Kernel.php
+                run: |
+                    rm ./src/Kernel.php
+
             -   name: Run PHPStan
                 run: |
                     ./vendor/bin/phpstan analyse --no-progress
