--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -59,6 +59,10 @@ jobs:
                 with:
                     working-directory: './vendor-bin/phpunit'
 
+            -   name: Remove Kernel.php
+                run: |
+                    rm ./src/Kernel.php
+
             -   name: Run PSalm
                 run: |
                     ./vendor-bin/phpunit/vendor/bin/psalm
