--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -16,7 +16,7 @@ jobs:
             matrix:
                 os: [ ubuntu-latest ]
                 # When you change a version here, change it also in the SonarCloud if condition
-                php: [ '7.4', '8.0', '8.1' ]
+                php: [ '8.1', '8.2' ]
                 symfony: [ '~5.4', '~6.0' ]
 
                 # This combination is not installable
