--- a/.baseline-phpstan.neon
+++ b/.baseline-phpstan.neon
@@ -1,64 +1,9 @@
 parameters:
 	ignoreErrors:
 		-
-			message: "#^Access to constant FAILURE on an unknown class SerendipityHQ\\\\Bundle\\\\UsersBundle\\\\Command\\\\Command\\.$#"
-			count: 1
-			path: src/Command/AbstractUserActivationCommand.php
-
-		-
-			message: "#^Access to constant SUCCESS on an unknown class SerendipityHQ\\\\Bundle\\\\UsersBundle\\\\Command\\\\Command\\.$#"
-			count: 1
-			path: src/Command/AbstractUserActivationCommand.php
-
-		-
-			message: "#^Access to constant FAILURE on an unknown class SerendipityHQ\\\\Bundle\\\\UsersBundle\\\\Command\\\\Command\\.$#"
-			count: 1
-			path: src/Command/AbstractUserCommand.php
-
-		-
-			message: "#^Access to constant SUCCESS on an unknown class SerendipityHQ\\\\Bundle\\\\UsersBundle\\\\Command\\\\Command\\.$#"
-			count: 1
-			path: src/Command/AbstractUserCommand.php
-
-		-
-			message: "#^Access to constant FAILURE on an unknown class SerendipityHQ\\\\Bundle\\\\UsersBundle\\\\Command\\\\Command\\.$#"
-			count: 3
-			path: src/Command/AbstractUserRolesCommand.php
-
-		-
-			message: "#^Access to constant SUCCESS on an unknown class SerendipityHQ\\\\Bundle\\\\UsersBundle\\\\Command\\\\Command\\.$#"
-			count: 1
-			path: src/Command/AbstractUserRolesCommand.php
-
-		-
-			message: "#^Access to constant SUCCESS on an unknown class SerendipityHQ\\\\Bundle\\\\UsersBundle\\\\Command\\\\Command\\.$#"
-			count: 1
-			path: src/Command/RoleAddCommand.php
-
-		-
-			message: "#^Access to constant SUCCESS on an unknown class SerendipityHQ\\\\Bundle\\\\UsersBundle\\\\Command\\\\Command\\.$#"
-			count: 1
-			path: src/Command/RoleRemCommand.php
-
-		-
-			message: "#^Access to constant SUCCESS on an unknown class SerendipityHQ\\\\Bundle\\\\UsersBundle\\\\Command\\\\Command\\.$#"
-			count: 1
-			path: src/Command/UserActivateCommand.php
-
-		-
 			message: "#^Call to an undefined method SerendipityHQ\\\\Bundle\\\\UsersBundle\\\\Model\\\\Property\\\\HasActivationInterface\\|Symfony\\\\Component\\\\Security\\\\Core\\\\User\\\\UserInterface\\:\\:activate\\(\\)\\.$#"
 			count: 1
 			path: src/Command/UserActivateCommand.php
-
-		-
-			message: "#^Access to constant FAILURE on an unknown class SerendipityHQ\\\\Bundle\\\\UsersBundle\\\\Command\\\\Command\\.$#"
-			count: 2
-			path: src/Command/UserCreateCommand.php
-
-		-
-			message: "#^Access to constant SUCCESS on an unknown class SerendipityHQ\\\\Bundle\\\\UsersBundle\\\\Command\\\\Command\\.$#"
-			count: 1
-			path: src/Command/UserCreateCommand.php
 
 		-
 			message: "#^Call to an undefined method SerendipityHQ\\\\Bundle\\\\UsersBundle\\\\Model\\\\Property\\\\HasPlainPasswordInterface\\|Symfony\\\\Component\\\\Security\\\\Core\\\\User\\\\UserInterface\\:\\:getPlainPassword\\(\\)\\.$#"
@@ -66,9 +11,9 @@ parameters:
 			path: src/Command/UserCreateCommand.php
 
 		-
-			message: "#^Access to constant SUCCESS on an unknown class SerendipityHQ\\\\Bundle\\\\UsersBundle\\\\Command\\\\Command\\.$#"
+			message: "#^Parameter \\#4 \\.\\.\\.\\$values of function sprintf expects bool\\|float\\|int\\|string\\|null, mixed given\\.$#"
 			count: 1
-			path: src/Command/UserDeactivateCommand.php
+			path: src/Command/UserCreateCommand.php
 
 		-
 			message: "#^Call to an undefined method SerendipityHQ\\\\Bundle\\\\UsersBundle\\\\Model\\\\Property\\\\HasActivationInterface\\|Symfony\\\\Component\\\\Security\\\\Core\\\\User\\\\UserInterface\\:\\:activate\\(\\)\\.$#"
