--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
         "ext-json": "*",
         "doctrine/orm": "^2.7",
         "nesbot/carbon": "^2.0 || ^3.0",
-        "symfony/console": "~5.4|~6.0",
-        "symfony/form": "~5.4|~6.0",
-        "symfony/property-access": "~5.4|~6.0",
-        "symfony/string": "~5.4|~6.0",
-        "symfony/validator": "~5.4|~6.0",
+        "symfony/console": "~5.4|~6.4|~7.0",
+        "symfony/form": "~5.4|~6.4|~7.0",
+        "symfony/property-access": "~5.4|~6.4|~7.0",
+        "symfony/string": "~5.4|~6.4|~7.0",
+        "symfony/validator": "~5.4|~6.4|~7.0",
         "thecodingmachine/safe": "^1.0|^2.0"
     },
     "require-dev": {
@@ -33,16 +33,16 @@
         "rector/rector": "1.0.1",
         "roave/security-advisories": "dev-master",
         "serendipity_hq/rector-config": "^1.0",
-        "symfony/browser-kit": "~5.4|~6.0",
-        "symfony/css-selector": "~5.4|~6.0",
-        "symfony/debug-bundle": "~5.4|~6.0",
+        "symfony/browser-kit": "~5.4|~6.4|~7.0",
+        "symfony/css-selector": "~5.4|~6.4|~7.0",
+        "symfony/debug-bundle": "~5.4|~6.4|~7.0",
         "symfony/monolog-bundle": "^2|^3",
         "symfony/phpunit-bridge": "~5.4|~6.0 || ^6.0|^7.0",
-        "symfony/security-core": "~5.4|~6.0",
-        "symfony/stopwatch": "~5.4|~6.0",
-        "symfony/twig-bundle": "~5.4|~6.0",
-        "symfony/var-dumper": "~5.4|~6.0",
-        "symfony/web-profiler-bundle": "~5.4|~6.0",
+        "symfony/security-core": "~5.4|~6.4|~7.0",
+        "symfony/stopwatch": "~5.4|~6.4|~7.0",
+        "symfony/twig-bundle": "~5.4|~6.4|~7.0",
+        "symfony/var-dumper": "~5.4|~6.4|~7.0",
+        "symfony/web-profiler-bundle": "~5.4|~6.4|~7.0",
         "thecodingmachine/phpstan-safe-rule": "1.2.0"
     },
     "config": {
