--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": "^8.1",
         "ext-json": "*",
-        "doctrine/orm": "^2.7",
+        "doctrine/orm": "^2.7 | ^3.0",
         "nesbot/carbon": "^2.0 || ^3.0",
         "symfony/console": "~5.4|~6.4|~7.0",
         "symfony/form": "~5.4|~6.4|~7.0",
