--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "symfony/property-access": "~5.4|~6.4|~7.0",
         "symfony/string": "~5.4|~6.4|~7.0",
         "symfony/validator": "~5.4|~6.4|~7.0",
-        "thecodingmachine/safe": "^1.0|^2.0"
+        "thecodingmachine/safe": "^1.0|^2.0|^3.0"
     },
     "require-dev": {
         "ext-ast": "*",
